axelor-web/src/main/webapp/css/view.form.css
/* ... */
table.form-layout td.form-item .select2-container .select2-choice abbr {
	top: 6px;
}
table.form-layout td.form-item .select2-container-multi .select2-choices,
table.form-layout td.form-item .select2-container-multi .select2-choices .select2-search-field input {
	height: 20px;
	min-height: 20px;
}

table.form-layout td.form-item button {
	padding: 2px 10px 2px;
	min-width: 24px;
	overflow: hidden;
	white-space: nowrap;
}

table.form-layout td.form-item textarea {
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	resize: vertical;
}

table.form-layout fieldset {
	padding: 4px 0;
}

table.form-layout td.form-item .input-append input {
	width: inherit;
	min-width: 200px;
	border-radius: 3px;
}

table.form-layout td.form-item .input-append input:focus {
	z-index: inherit;
}

table.form-layout td.form-item .input-append button {
	padding: 2px 8px;
}

.picker-input {
	display: inline-block;
	box-sizing: border-box;
}

.picker-input > input {
	margin: 0;
	width: 100%;
}

.picker-input > .picker-icons {
	position: absolute;
	display: inline-block;
	white-space: nowrap;

	top: 0;
	right: 3px;
	height: 100%;
}

.picker-input > .picker-icons > i[class^=icon] {
	cursor: pointer;
	margin-top: 2px;
	margin-right: 2px;
	padding: 2px;
	display: inline-block;
}

.picker-input > .picker-icons > i[class^=icon-caret] {
	font-size: 14px;
	margin-top: 1px;
}

.picker-input > input,
.picker-icons-1 > input {
	padding-right: 16px;
}

.picker-icons-2 > input {
	padding-right: 32px;
}

.picker-icons-3 > input {
	padding-right: 48px;
}

.picker-icons-4 > input {
	padding-right: 64px;
}

table.form-layout .tabbable-tabs .nav-tabs {
	margin-bottom: 0px;
}

table.form-layout .tabbable-tabs .tab-content {
	position: relative;
	padding: 4px;
	border: 1px solid #DDD;
	border-top: 0;
}

table.form-layout td.form-item .stackbar {
	position: relative;
}

table.form-layout td.form-item .stackbar.inline-editable {
	min-height: 200px;
}

.icons-bar {
	display: inline-block;
	padding-top: 4px;
}

.icons-bar i {
	margin: 2px;
	padding: 2px;
	cursor: pointer;
}

table.form-layout td.form-item .slickgrid {
	position: absolute;
	left: 0px; right: 0px;
	top: 26px; bottom: 0px;
	border-top: none;
}

table.form-layout td.form-item .slickgrid .slick-cell.editable input,
table.form-layout td.form-item .slickgrid .slick-cell.editable > [x-field] {
	height: 23px;
}

td.form-item > * {
	position: relative;	
}

.border-box,
.bordered-box {
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
	    -ms-box-sizing: border-box;
	        box-sizing: border-box;
}

.bordered,
.bordered-box {
	border: 1px solid #DDD;
	-webkit-border-radius: 4px;
	   -moz-border-radius: 4px;
	    -ms-border-radius: 4px;
	        border-radius: 4px;
}

.form-item .disabled-overlay {
	position: absolute;
	top: 0; left: 0; right: 0; bottom: 0;
	z-index: 10;
}

.form-item .form-item-group > .disabled-overlay {
	top: 12px;
}

.form-item .form-item-group[x-show-title="false"] > .disabled-overlay {
	top: 0;
}

.ui-state-disabled .ui-state-disabled {
	opacity: 1;
}

.form-item .form-item-group {
	padding: 4px;
	padding-top: 0;
}

.form-item .form-item-group > legend i[class^=icon] {
	color: #CCC;
	height: 12px;
	margin-right: 4px;
	display: inline-block;
	cursor: pointer;
}

.form-item .form-item-group > legend i[class^=icon]:hover {
	 text-decoration: none;
	 color: inherit;
}

.form-item .form-item-group > legend {
	
	width: auto;
	margin: 0;
	margin-left: 10px;
	padding: 0 4px;
		
	font-size: inherit;
	line-height: 1.4em;
	
	border: none;
}

.form-item .form-item-portlet,
.form-item .form-item-portlet .portlet {
	min-height: 250px;
}

.form-item .image-item div.btn-group {
	position: absolute;
	left: 20px;
	bottom: 12px;
}

.form-item .nested-editor > legend > span.legend-toolbar {
	padding-left: 4px;
}

.form-item .nested-editor {
	margin-top: -3px !important;
}

.form-item .nested-editor.inline-form {
	position: relative;
	border: 0;
	padding-top: 30px;
}

.form-item .nested-editor.detail-form {
	border-top: 0;
	padding-top: 8px; 
}

.form-item .form-item-container.ng-invalid > textarea,
.form-item .form-item-container.ng-invalid > .picker-input input,
.form-item .form-item-container.ng-invalid > .ui-spinner input,
.form-item .form-item-container.ng-invalid > input,
.form-item .input-append.ng-invalid > input,
.form-item .picker-input.ng-invalid > input {
	border-color: #B94A48;
}

.form-item .form-item-container.ng-invalid:focus,
.form-item .input-append.ng-invalid > input:focus,
.form-item .form-item-container.ng-invalid > input:focus,
.form-item .picker-input.ng-invalid > input:focus {
	border-color: #953B39;
	
	-webkit-box-shadow: 0 0 6px #D59392;
	   -moz-box-shadow: 0 0 6px #D59392;
	        box-shadow: 0 0 6px #D59392;
}

.form-item form {
	margin: 0;
}

.form-item div.code-editor {
	border: 1px solid #DDD;
}

.form-item span.error {
	color: #953B39;
}

.form-item .spacer-item {
	-webkit-user-select: none;
	   -moz-user-select: none;
	        user-select: none;
}

.form-item .ui-spinner {
	padding-right: 0;
	border: 0;
	overflow: inherit;
}

.form-item .ui-spinner .ui-spinner-up {
	margin-top: 1px;
}

.form-item .ui-spinner .ui-spinner-down {
	margin-bottom: 1px;
}

table.form-layout td.form-item .ui-spinner input {
	width: 100%;
	text-align: right;
	padding-right: 16px;
	margin: 0;
}

.form-item ul.radio-select {
	list-style-type: none;
	overflow: hidden;
	padding-top: 3px;
}

.form-item ul.radio-select > li {
	float: left;
	margin: 0 4px;
}

.form-item ul.radio-select-vertical > li {
	float: none;
}

.form-item ul.radio-select > li input[type="radio"],
.form-item ul.radio-select > li input[type="checkbox"] {
	margin-top: -2px;
}

.form-item ul.radio-select.readonly > li label {
	cursor: default;
}

table.field-details {
	width: 100%;
}

table.field-details th {
	width: 5%;
	white-space: nowrap;
	text-align: right;
}

table.field-details .help-text hr {
	margin: 9px 0;
}

.popover {
	z-index: 2100;
}
/* ... */

